exams/piscine/3-2-str_capitalizer/3-2-str_capitalizer.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e1z2r8p10.42.us.org
Darwin 15.6.0 x86_64
$> date
Fri Nov  3 21:59:46 PDT 2017
$> gcc --version
Configured with: --prefix=/Applications/Xcode.app/Contents/Developer/usr --with-gxx-include-dir=/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.12.sdk/usr/include/c++/4.2.1
Apple LLVM version 8.0.0 (clang-800.0.38)
Target: x86_64-apple-darwin15.6.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin
$> clang --version
Apple LLVM version 8.0.0 (clang-800.0.38)
Target: x86_64-apple-darwin15.6.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2017/piscine-c-exam01/exam_20171104/nmolina

= Git history ==================================================================
$> git -C /var/folders/04/r93_yv7n1p992f3bmv982qcm0000gp/T/tmpnzZc32/user log --pretty='%H - %an, %ad : %s'
6813be4607e8f413837942caa31c3826b82162fe - Exam 42, Fri Nov 3 21:59:18 2017 -0700 : did not finish level 3 - str_capitalizer
fee268fc8a5c9e3fa9345c95c2c5fe98790f1a9b - Exam 42, Fri Nov 3 21:41:17 2017 -0700 : attempted level 3 - ft_range
487c965fc35a272b362b883c090e911fa5022436 - Exam 42, Fri Nov 3 20:43:58 2017 -0700 : attempted level 2 - union
5064af8a92db1d59fb1053609a5bb59fd100af38 - Exam 42, Fri Nov 3 20:36:29 2017 -0700 : another backup
d6a40d6f4d59e69ffac139dfe9e714ea279c0b88 - Exam 42, Fri Nov 3 20:29:33 2017 -0700 : backup
8734b5e2f77efd62c27cd5ccf1f4ec8ad9f0de7c - Exam 42, Fri Nov 3 19:28:56 2017 -0700 : gave up on level 2 - inter
b3d525a805307a1cea7b2683005dcff40e41cc3b - Exam 42, Fri Nov 3 18:30:12 2017 -0700 : attempted level 1 - search_and_replace
9d9a0c2af27d04d6d1416972b1d7b01707b0f637 - Exam 42, Fri Nov 3 18:14:14 2017 -0700 : attempted level 0 - ft_countdown
 
= Collected files ==========================================
$> ls -lAR /var/folders/04/r93_yv7n1p992f3bmv982qcm0000gp/T/tmpnzZc32/user
total 32
-rw-r--r--  1 deepthought  deepthought  2275 Nov  3 21:59 __GIT_HISTORY
-rwxr-xr-x  1 deepthought  deepthought  8788 Nov  3 21:59 a.out
drwxr-xr-x  3 deepthought  deepthought   102 Nov  3 21:59 ft_countdown
drwxr-xr-x  3 deepthought  deepthought   102 Nov  3 21:59 ft_range
drwxr-xr-x  3 deepthought  deepthought   102 Nov  3 21:59 inter
drwxr-xr-x  3 deepthought  deepthought   102 Nov  3 21:59 search_and_replace
drwxr-xr-x  3 deepthought  deepthought   102 Nov  3 21:59 str_capitalizer
drwxr-xr-x  3 deepthought  deepthought   102 Nov  3 21:59 swap_bits
drwxr-xr-x  3 deepthought  deepthought   102 Nov  3 21:59 union

/var/folders/04/r93_yv7n1p992f3bmv982qcm0000gp/T/tmpnzZc32/user/ft_countdown:
total 8
-rw-r--r--  1 deepthought  deepthought  1195 Nov  3 21:59 ft_countdown.c

/var/folders/04/r93_yv7n1p992f3bmv982qcm0000gp/T/tmpnzZc32/user/ft_range:
total 8
-rw-r--r--  1 deepthought  deepthought  1420 Nov  3 21:59 ft_range.c

/var/folders/04/r93_yv7n1p992f3bmv982qcm0000gp/T/tmpnzZc32/user/inter:
total 8
-rw-r--r--  1 deepthought  deepthought  1229 Nov  3 21:59 inter.c

/var/folders/04/r93_yv7n1p992f3bmv982qcm0000gp/T/tmpnzZc32/user/search_and_replace:
total 8
-rw-r--r--  1 deepthought  deepthought  1452 Nov  3 21:59 search_and_replace.c

/var/folders/04/r93_yv7n1p992f3bmv982qcm0000gp/T/tmpnzZc32/user/str_capitalizer:
total 8
-rw-r--r--  1 deepthought  deepthought  1488 Nov  3 21:59 str_capitalizer.c

/var/folders/04/r93_yv7n1p992f3bmv982qcm0000gp/T/tmpnzZc32/user/swap_bits:
total 8
-rw-r--r--  1 deepthought  deepthought  942 Nov  3 21:59 swap_bits.c

/var/folders/04/r93_yv7n1p992f3bmv982qcm0000gp/T/tmpnzZc32/user/union:
total 8
-rw-r--r--  1 deepthought  deepthought  2103 Nov  3 21:59 union.c
 
= str_capitalizer ==============================================================
$> gcc -Wextra -Wall -Werror str_capitalizer.c -o user_exe 
str_capitalizer.c:31:27: error: expression result unused [-Werror,-Wunused-value]
                                argv[word][character] + 32;
                                ~~~~~~~~~~~~~~~~~~~~~ ^ ~~
str_capitalizer.c:29:27: error: expression result unused [-Werror,-Wunused-value]
                                argv[word][character] - 32;
                                ~~~~~~~~~~~~~~~~~~~~~ ^ ~~
str_capitalizer.c:18:15: error: unused parameter 'argc' [-Werror,-Wunused-parameter]
int             main(int argc, char **argv)
                         ^
str_capitalizer.c:30:13: error: comparison of constant 65 with boolean expression is always false [-Werror,-Wtautological-constant-out-of-range-compare]
                        else if (IS_UPPER(argv[word][character] && !IS_SPACE(argv[word][character -1])))
                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
str_capitalizer.c:15:27: note: expanded from macro 'IS_UPPER'
#define IS_UPPER(x) (((x) >= 65 && (x) <= 90))
                      ~~~ ^  ~~
4 errors generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
